// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example Component default 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Hello world !!!
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    hehehe
  </Text>
</View>
`;

exports[`Storyshots Example Component english 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Hello world !!!
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    fuck
  </Text>
</View>
`;
